Make teleportation feature more extensible